--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="navbar-left">
         <img src="https://static.twitchcdn.net/assets/favicon-32-e29e246c157142c94346.png" alt="Logo" class="navbar-logo"/>
         <!-- Replace Twitch login with static username -->
-        <span class="streamer-name osecaadegas95-name">noqZyoCaminista</span>
+        <span class="streamer-name osecaadegas95-name">noqZyoCamionista</span>
         <!-- Image Switcher Start (right after login button) -->
         <a id="navbar-image-link" href="#" target="_blank" style="display:inline-block;">
           <img id="navbar-image-switcher" src="https://static.twitchcdn.net/assets/favicon-32-e29e246c157142c94346.png" alt="Switcher" class="navbar-switcher-img"/>
@@ -298,4 +298,5 @@
     </div>
   </div>
 </body>
+
 </html>
